fix menu z-index problem

--- a/MVP/MVP/css/styles.css
+++ b/MVP/MVP/css/styles.css
@@ -1127,8 +1127,7 @@ header.head {
     padding: 30px 0 30px 30px;
     border-color: #d5dbe9;
     border-width: 0 0 0 2px;
-    border-style: solid;
-    position: fixed; }
+    border-style: solid; }
     .profile__menu__separator {
       height: 2px;
       width: 100%;
@@ -3221,3 +3220,4 @@ input:checked {
 
 body {
   font-family: Lato; }
+
