--- a/MVP/MVP/sass/_profile.scss
+++ b/MVP/MVP/sass/_profile.scss
@@ -168,7 +168,6 @@ $desktop: "(min-width: 1440px)";
         border-color: #d5dbe9;
         border-width: 0 0 0 2px;
         border-style: solid;
-        position: fixed;
 
         &__separator {
             height: 2px;
